; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_nwpserial.c_nwpserial_putchar.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_nwpserial.c_nwpserial_putchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nwpserial_port = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@UART_LSR_THRE = common dso_local global i32 0, align 4
@UART_TX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nwpserial_port*, i8)* @nwpserial_putchar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nwpserial_putchar(%struct.nwpserial_port* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.nwpserial_port*, align 8
  %4 = alloca i8, align 1
  store %struct.nwpserial_port* %0, %struct.nwpserial_port** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.nwpserial_port*, %struct.nwpserial_port** %3, align 8
  %6 = load i32, i32* @UART_LSR_THRE, align 4
  %7 = call i32 @wait_for_bits(%struct.nwpserial_port* %5, i32 %6)
  %8 = load %struct.nwpserial_port*, %struct.nwpserial_port** %3, align 8
  %9 = getelementptr inbounds %struct.nwpserial_port, %struct.nwpserial_port* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @UART_TX, align 4
  %12 = load i8, i8* %4, align 1
  %13 = call i32 @dcr_write(i32 %10, i32 %11, i8 zeroext %12)
  %14 = load %struct.nwpserial_port*, %struct.nwpserial_port** %3, align 8
  %15 = getelementptr inbounds %struct.nwpserial_port, %struct.nwpserial_port* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  ret void
}

declare dso_local i32 @wait_for_bits(%struct.nwpserial_port*, i32) #1

declare dso_local i32 @dcr_write(i32, i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
